# CoGhentToiletPaper

./: .env.template  .gitattributes  .gitignore  .gitmodules  404.html  Gemfile  LICENSE  README.md  _config.yml  background_info.md  calibration_routine.sh  camera_stream.py  camera_test.py  coghent_toilet.py  config_toilet.py  index.html  index.markdown  mkdocs.yml  model.py  prep_env.sh  print_test.py  pyproject.toml  requirements.txt
.github/workflows/: deploy-mkdocs.yml  jekyll-gh-pages.yml
.obsidian/: workspace
3DPrint/: air_vent_conn.gcode  air_vent_conn.stl  toilet_B_v1.gcode  toilet_roll_balancer.gcode  toilet_roll_balancer.stl  toilet_roll_stepper_A_v1.stl  toilet_roll_stepper_B_v1.stl
3DPrint/Camera/: Arm_1.stl  (+4 more)
_posts/: 2023-04-07-welcome-to-jekyll.markdown
camera/: line_detect.py
dBPathFinder/: .~lock.DMG_tree.csv#  DMG_tree.csv  README.md  findOverlap.py  lemmatizer.py  preprocess_df.py  stemmer.py  test_findOverlap.py
docs/: _config.yml  index.markdown  index.md  index.md.md  path_finding.md
imageConversion/: ArtLineFlow.ipynb  Dockerfile  Dockerfile.CPU  Dockerfile.GPU  Dockerfile2.CPU  README.md  artlineflow.py  environment.yml  image_conversion.py  requirements.txt
physical_construct/: coGhent_plexi.ai  paper_printer v166.f3d
physical_control/: keypad_controller.py  magnet.py  paper_control.py  steppers_test.py  suction.py
plotter/: plot_test.py
print_timeline/: print_timeline.py
search/: search_index.json
src/: coghent_toilet.py  disable_steppers.py
toilet_paper_placement_indicator/: mask_imgs.py  train_model.py  utils.py
(+137 files in other folders)
