[tool.poetry]
name = "coghenttoiletpaper"
version = "0.1.0"
description = ""
authors = ["Wouter Devriese <devriese.wouter@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
anytree = "^2.8.0"
nltk = "^3.8.1"
numpy = "^1.24.1"
opencv-python = "^4.7.0.68"
pandas = "^1.5.2"
pillow = "^9.4.0"
pip = "^22.3.1"
requests = "^2.28.2"
svglue = "^0.3.0"
svgutils = "^0.3.4"
tabulate = "^0.9.0"
finite-state-machine = "^0.5.0"
pylodstorage = "^0.4.9"
drawsvg = "^1.9.0"
adafruit-circuitpython-motorkit = "^1.6.11"
board = "^1.0"
sshkeyboard = "^2.3.1"
supabase = "^0.7.1"
python-dotenv = "^0.21.1"
scripts = "^2.0"
linedraw = { git = 'https://github.com/devriesewouter89/linedraw', branch = 'master' }
[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
